--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Euphoria | Main page</title>
     <link rel="stylesheet" href="./assets/styles/css/reset.css">
-    <link rel="stylesheet" href="./assets/styles/css/style.css">
-    <link rel="stylesheet" href="./assets/styles/scss/style.scss">
-    <script defer src="./assets/js/script.js"></script>
+    <link rel="stylesheet" href="./assets/styles/css/style.css"> 
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
-    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script defer src="https://unpkg.com/swiper/swiper-bundle.min.js"></script> 
+    <script defer src="./assets/js/script.js"></script>
 </head>
+
 
 <body>
     <header class="header">
